[gd_scene load_steps=7 format=3 uid="uid://cwgan6liwytel"]

[ext_resource type="Script" uid="uid://cnr6ix2unlcgh" path="res://scenes/ui/upgrade_screen/upgrade_screen.gd" id="1_uoxqe"]
[ext_resource type="FontFile" uid="uid://nq18mb6fhq23" path="res://resources/fonts/KarenFat.ttf" id="2_au74e"]

[sub_resource type="Animation" id="Animation_au74e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uoxqe"]
resource_name = "in"
length = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jvc53"]
resource_name = "out"
length = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvc53"]
_data = {
&"RESET": SubResource("Animation_au74e"),
&"in": SubResource("Animation_uoxqe"),
&"out": SubResource("Animation_jvc53")
}

[node name="UpgradeScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uoxqe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jvc53")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1534, 0.59, 0.313487, 0.396078)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="CardContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_au74e")
theme_override_font_sizes/font_size = 32
text = "Choose Upgrade"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_au74e")
theme_override_font_sizes/font_size = 16
text = "Select an upgrade to apply to your character."
horizontal_alignment = 1
